# IndicXlit

./: .gitignore  docker-compose.monitoring.yml
app/: dependencies.txt  start_server.py
app/ai4bharat/transliteration/: xlit_server.py
inference experiment/: benchmark_batch_decode.py
inference experiment/trtllm_port/: CHAT_HANDOFF.md  PHASE_STATUS.md  README.md  TRT_OUTPUT_SCHEMA.md  capture_fairseq_baseline.py  compare_trtllm_parity.py  convert_indicxlit_to_trtllm.py  env_trtllm.sh  evaluate_dakshina_trtllm.py  inspect_indicxlit_checkpoint.py  prepare_indicxlit_trtllm_bundle.py  probe_trtllm_env.py  profile_direct_b256_once.py  run_trtllm_greedy.py
inference experiment/trtllm_port/artifacts/: dakshina_hi_trtllm_beam4_eval_b1_summary.json  dakshina_hi_trtllm_beam4_eval_summary.json  indicxlit_checkpoint_mapping.json  trtllm_beam4_b1.json  trtllm_beam4_b1_recheck.json  trtllm_beam4_b2.json  trtllm_beam4_vs_greedy_baseline_report.json  trtllm_beam4_words.json  trtllm_benchmark_batch_decode.csv  trtllm_benchmark_batch_decode_b512_bharat.csv  trtllm_env_probe.json  trtllm_greedy_b1.json  trtllm_greedy_b128.json  trtllm_greedy_b32.json  trtllm_greedy_words.json  trtllm_parity_report.json  trtllm_weight_port_verification.json
inference experiment/trtllm_port/artifacts/fairseq_baseline/: beam8_top5_no_postprocess_benchmark_log.json  beam8_top5_postprocess_benchmark.csv  beam8_top5_postprocess_benchmark_log.json  greedy_no_postprocess_benchmark.csv  greedy_no_postprocess_benchmark_log.json  greedy_postprocess.json  greedy_postprocess_benchmark_log.json  manifest.json
inference experiment/trtllm_port/docker_b256/: Dockerfile  README.md  docker-compose.yml  mps-entrypoint.sh  nginx.conf  prepare_context.sh  prometheus.yml
inference experiment/trtllm_port/docker_b256/cpp_backend/src/: indicxlit_postprocess.cc
inference experiment/trtllm_port/docker_b256/grafana/dashboards/: indicxlit-b256.json
inference experiment/trtllm_port/docker_b256/scripts/: run_server.sh  smoke_core.py  smoke_ensemble.py
inference experiment/trtllm_port/scripts/: INSTALL_TRTLLM_TRITON.md  install_trtllm_triton.sh
inference experiment/trtllm_port/triton_indicxlit/: README.md
inference experiment/trtllm_port/triton_indicxlit/model_repository/indicxlit_ensemble/: config.pbtxt
inference experiment/trtllm_port/triton_indicxlit/model_repository/indicxlit_postprocess/: config.pbtxt
inference experiment/trtllm_port/triton_indicxlit/scripts/: run_triton.sh
inference_experiment/: benchmark_batch_decode.py  greedy_decode_experiment.py
inference_experiment/trtllm_port/: CHAT_HANDOFF.md  PHASE_STATUS.md  README.md  benchmark_cpp_executor_bindings.py  benchmark_direct_trtllm.py  benchmark_triton_core_http.py  capture_fairseq_baseline.py  env_trtllm.sh  evaluate_dakshina_fairseq.py  evaluate_dakshina_trtllm.py  inspect_indicxlit_checkpoint.py  probe_trtllm_env.py  profile_direct_b256_once.py  verify_trtllm_weight_port.py  words_en_hi.txt
inference_experiment/trtllm_port/artifacts/: dakshina_hi_trtllm_beam4_eval_b1_summary.json  dakshina_hi_trtllm_beam4_eval_summary.json  indicxlit_checkpoint_mapping.json  trtllm_beam4_b1.json  trtllm_beam4_b1_recheck.json  trtllm_beam4_b2.json  trtllm_beam4_vs_greedy_baseline_report.json  trtllm_beam4_words.json  trtllm_benchmark_batch_decode_b186.csv  trtllm_env_probe.json  trtllm_greedy_b1.json  trtllm_greedy_b128.json  trtllm_greedy_b32.json  trtllm_greedy_words.json  trtllm_parity_report.json  trtllm_weight_port_verification.json
inference_experiment/trtllm_port/artifacts/fairseq_baseline/: beam8_top5_no_postprocess.json  beam8_top5_no_postprocess_benchmark.csv  beam8_top5_no_postprocess_benchmark_log.json  beam8_top5_postprocess.json  beam8_top5_postprocess_benchmark_log.json  greedy_no_postprocess.json  greedy_no_postprocess_benchmark_log.json  greedy_postprocess_benchmark.csv  greedy_postprocess_benchmark_log.json  manifest.json
inference_experiment/trtllm_port/docker_b256/: Dockerfile  README.md  docker-compose.nsys-mps.yml  docker-compose.nsys.yml  docker-compose.yml  mps-entrypoint.sh  nginx.conf  prepare_context.sh  prometheus.yml  server_continuous_kv.py  static-mps-client-entrypoint.sh  static-mps-client-env.sh
inference_experiment/trtllm_port/docker_b256/cpp_backend/: CMakeLists.txt
inference_experiment/trtllm_port/docker_b256/cpp_backend/src/: backend.hpp  indicxlit_preprocess.cc
inference_experiment/trtllm_port/docker_b256/cpp_executor/: CMakeLists.txt
inference_experiment/trtllm_port/docker_b256/cpp_executor/src/: indicxlit_executor_smoke.cc
inference_experiment/trtllm_port/docker_b256/k6/: core_b256.js
inference_experiment/trtllm_port/docker_b256/rust_executor_server/: .dockerignore  Dockerfile  README.md  build.rs
inference_experiment/trtllm_port/docker_b256/rust_executor_server/cpp/: CMakeLists.txt  direct_cache_tile.cu  indicxlit_bridge.cc  indicxlit_bridge.h
inference_experiment/trtllm_port/scripts/: INSTALL_TRTLLM_TRITON.md  build_host_b256_engine.sh  build_rust_executor_image.sh  install_trtllm_triton.sh  prepare_rust_runtime_base_context.sh
inference_experiment/trtllm_port/triton_indicxlit/: README.md
inference_experiment/trtllm_port/triton_indicxlit/scripts/: dry_run_pipeline.py  run_triton.sh
monitoring/: README.md  prometheus.yml
monitoring/grafana/dashboards/: indicxlit-telemetry.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
rust_inference/: README.md  docker-compose.yml
rust_inference/monitoring/grafana/dashboards/: indicxlit-rust-runtime.json
rust_inference/monitoring/prometheus/: prometheus.yml
rust_inference/rust_executor_server/: Cargo.toml  Dockerfile
rust_inference/rust_executor_server/cpp/: CMakeLists.txt  direct_cache_tile.h  direct_dynamic_decode.cc  direct_dynamic_decode.h  direct_enc_dec_runner.cc  direct_enc_dec_runner.h  direct_smoke.cc
rust_inference/rust_executor_server/src/: index.html  main.rs
rust_inference/scripts/: build_rust_executor_image.sh  download_checkpoint_and_build_engine.sh  evaluate_dakshina.py  evaluate_dakshina.sh
(+15 files in other folders)
